--- a/source/Appccelerate.Fundamentals/appccelerate.fundamentals.nuspec
+++ b/source/Appccelerate.Fundamentals/appccelerate.fundamentals.nuspec
@@ -15,15 +15,15 @@
     <copyright>Copyright 2012-2014</copyright>
     <tags>Appccelerate</tags>
     <frameworkAssemblies>
-      <frameworkAssembly assemblyName="System" targetFramework="portable-windows8+net45" />
-      <frameworkAssembly assemblyName="System.Core" targetFramework="portable-windows8+net45" />
+      <frameworkAssembly assemblyName="System" targetFramework="net40" />
+      <frameworkAssembly assemblyName="System.Core" targetFramework="net40" />
     </frameworkAssemblies>
     <dependencies/>	
   </metadata>
   <files>
-    <file src="bin\Release\Appccelerate.Fundamentals.dll" target="lib\portable-windows8+net45" />
-    <file src="bin\Release\Appccelerate.Fundamentals.pdb" target="lib\portable-windows8+net45" />
-    <file src="bin\Release\Appccelerate.Fundamentals.xml" target="lib\portable-windows8+net45" />
+    <file src="bin\Release\Appccelerate.Fundamentals.dll" target="lib\net40" />
+    <file src="bin\Release\Appccelerate.Fundamentals.pdb" target="lib\net40" />
+    <file src="bin\Release\Appccelerate.Fundamentals.xml" target="lib\net40" />
     <file src="**\*.cs" target="src" />
   </files>  
 </package>
